# tfm-template

./: .gitmodules  README.md
copilot/: copilot.sh  nucleo_l552ze_q-mstp-config.cmake
exp-m-step-eval-tfm/: 2-deploy.sh  flake.nix
exp-m-step-eval-tfm/src/: CMakeLists.txt  mx-generated.cmake
exp-m-step-eval-tfm/src/NonSecure/: .cproject  CMakeLists.txt  STM32L552ZETXQ_FLASH.ld  STM32L552xE_FLASH_ns.ld
exp-m-step-eval-tfm/src/NonSecure/Core/Inc/: icache.h  tim.h
exp-m-step-eval-tfm/src/NonSecure/Core/Src/: main.c  stm32l5xx_it.c
exp-m-step-eval-tfm/src/NonSecure/Debug/: makefile  objects.list  objects.mk
exp-m-step-eval-tfm/src/Secure/: .cproject  .project  STM32L5-Single-step_Secure.launch  STM32L552ZETXQ_FLASH.ld
exp-m-step-eval-tfm/src/Secure/Core/Inc/: partition_stm32l552xx.h  stm32l5xx_it.h
exp-m-step-eval-tfm/src/Secure/Core/Src/: gtzc_s.c
exp-m-step-eval-tfm/src/Secure/Debug/: STM32L5-Single-step_Secure.list
ns-world/: 0-config.sh  1-compile.sh  2-deploy.sh  flash_no_tfm.sh
ns-world/src/: STM32L5-Single-step_Cache_110MHz.ioc
ns-world/src/Drivers/STM32L5xx_HAL_Driver/Src/: stm32l5xx_hal.c
ns-world/src/NonSecure/: .project  STM32L5-Single-step_NonSecure Debug.launch  mx-generated.cmake
ns-world/src/NonSecure/Core/Inc/: stm32l5xx_hal_conf.h  stm32l5xx_it.h
ns-world/src/NonSecure/Core/Src/: icache.c  main.c  tim.c
ns-world/src/NonSecure/Debug/Core/Src/: subdir.mk
ns-world/src/NonSecure/Debug/Drivers/STM32L5xx_HAL_Driver/: subdir.mk
ns-world/src/Secure/: CMakeLists.txt  STM32L552xE_FLASH_s.ld  mx-generated.cmake
ns-world/src/Secure/Core/Src/: main.c  secure_nsc.c  stm32l5xx_it.c
ns-world/src/Secure/Debug/: makefile
ns-world/src/Secure/Debug/Core/Src/: subdir.mk
ns-world/src/Secure/Debug/Core/Startup/: subdir.mk
ns-world/src/Secure/Debug/Drivers/STM32L5xx_HAL_Driver/: subdir.mk
